all registration links

--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -116,7 +116,7 @@
         <div class="welcome__content">
           <h1 class="welcome__name">Multi-Platform Trading</h1>
           <p class="welcome__text">MT4 is a world-wide renowned application which enables you to trade Forex, Commodities and Futures. It is suitable for beginner investors, but also for more experienced ones, because it is so thorough and easy to use. It`s, very intuitive and it informs you about all the latest developments in the trading field. Overall, the MT4 is the most popular and widely used Forex trading platform.</p>
-          <a class="welcome__button" href="#">Create account</a>
+          <a class="welcome__button" href="register/real/step-1.html">Create account</a>
         </div>
       </div>
     </div>
@@ -167,7 +167,7 @@
             <li>Automator Trading Rules</li>
             <li>Desktop Widget</li>
           </ul>
-          <a href="#">Create account</a>
+          <a href="trading/platforms/zulutrade.html">Create account</a>
         </div>
         <div class="account__box">
           <h2>Real account</h2>
@@ -182,7 +182,7 @@
             <li>Multi-platforms</li>
             <li>Fast Deposits and withdrawals</li>
           </ul>
-          <a href="#">Create account</a>
+          <a href="register/real/step-1.html">Create account</a>
         </div>
         <div class="account__box">
           <h2>Demo account</h2>
@@ -196,7 +196,7 @@
             <li>Multiplatforms </li>
             <li>No strategy Limitations</li>
           </ul>
-          <a href="#">Create account</a>
+          <a href="register/demo.html">Create account</a>
         </div>
       </div>
     </div>
