--- a/forexglobal/trading/account-types.html
+++ b/forexglobal/trading/account-types.html
@@ -127,7 +127,7 @@
             <li>Access to Breaking News & Market Research</li>
             <li>Account Executive Team Available 24/5</li>
           </ul>
-          <a href="#">Create account</a>
+          <a href="../register/real/step-1.html">Create account</a>
         </div>
         <div class="account-types__box  account-types__box--silver">
           <h2>Classic Silver</h2>
@@ -151,7 +151,7 @@
             <li>Access to Breaking News & Market Research</li>
             <li>Account Executive Team Available 24/5</li>
           </ul>
-          <a href="#">Create account</a>
+          <a href="../register/real/step-1.html">Create account</a>
         </div>
         <div class="account-types__box  account-types__box--gold">
           <h2>Premium Gold</h2>
@@ -175,7 +175,7 @@
             <li>Access to Breaking News & Market Research</li>
             <li>Account Executive Team Available 24/5</li>
           </ul>
-          <a href="#">Create account</a>
+          <a href="../register/real/step-1.html">Create account</a>
         </div>
         <div class="account-types__box  account-types__box--zulu">
           <h2>ZuluTrade</h2>
@@ -199,7 +199,7 @@
             <li>Account Executive Team</li>
             <li>Available 24/5</li>
           </ul>
-          <a href="#">Create account</a>
+          <a href="platfroms/zulutrade.html">Create account</a>
         </div>
       </div>
       <p class="account-types__risk">Trading involves risk of loss</p>
