--- a/forexglobal/trading/platforms/mobile.html
+++ b/forexglobal/trading/platforms/mobile.html
@@ -127,11 +127,11 @@
         <div class="container">
           <h2>Try It Now</h2>
           <div class="inner__links">
-            <a class="inner__real" href="#">
+            <a class="inner__real" href="../../register/real/step-1.html">
               Real account<br>
               <span>start live trading</span>
             </a>
-            <a class="inner__demo" href="#">
+            <a class="inner__demo" href="../../register/demo.html">
               Demo account<br>
               <span>start praccticing for free</span>
             </a>
