mobile version register

--- a/forexglobal/register/demo.html
+++ b/forexglobal/register/demo.html
@@ -395,7 +395,7 @@
             <option value="5000000">500000</option>
           </select>
         </div>
-        <a href="../img/pdf/Demo-Account-Disclosure.pdf" target="_blank">Read Demo Disclaimer</a>
+        <a class="register__demo" href="../img/pdf/Demo-Account-Disclosure.pdf" target="_blank">Read Demo Disclaimer</a>
         <div class="register__flex">
           <input type="hidden">
           <button class="register__next" type="button" name="Next Step">Register</button>
