--- a/prizma/index.html
+++ b/prizma/index.html
@@ -38,7 +38,7 @@
       <nav class="nav">
         <ul class="nav__list">
           <li>
-            <a class="nav__item  nav__item--inactive" href="#">Accounts</a>
+            <a class="nav__item" href="#">Accounts</a>
             <ul class="nav__sublist">
               <li><a class="nav__subitem" href="#">Trade with us</a></li>
               <li><a class="nav__subitem" href="#">Account types</a></li>
@@ -46,8 +46,24 @@
               <li><a class="nav__subitem" href="#">Open live account</a></li>
             </ul>
           </li>
-          <li><a class="nav__item" href="#">Platforms</a></li>
-          <li><a class="nav__item" href="#">Tools</a></li>
+          <li>
+            <a class="nav__item" href="#">Platforms</a>
+            <ul class="nav__sublist">
+              <li><a class="nav__subitem" href="#">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="#">WebTrader</a></li>
+              <li><a class="nav__subitem" href="#">Trade Mobile</a></li>
+            </ul>
+          </li>
+          <li>
+            <a class="nav__item" href="#">Tools</a>
+            <ul class="nav__sublist">
+              <li><a class="nav__subitem" href="#">Spread and trading</a></li>
+              <li><a class="nav__subitem" href="#">Glossary</a></li>
+              <li><a class="nav__subitem" href="#">Forex Signals</a></li>
+              <li><a class="nav__subitem" href="#">Faq</a></li>
+              <li><a class="nav__subitem" href="#">Account funding</a></li>
+            </ul>
+          </li>
         </ul>
       </nav>
     </div>
