--- a/prizma/index.html
+++ b/prizma/index.html
@@ -6,6 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PrizmaFX</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#e9edf1">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="msapplication-config" content="browserconfig.xml">
+  <meta name="theme-color" content="#e9edf1">
+  <meta name="msapplication-TileColor" content="#e9edf1">
+  <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
   <!-- Slick -->
   <link rel="stylesheet" href="js/slick/slick.css"/>
   <link rel="stylesheet" href="js/slick/slick-theme.css"/>
@@ -22,7 +35,9 @@
             </select>
           </li>
           <li>
-            
+            <label class="header__search">
+              <input type="search">
+            </label>
           </li>
         </ul>
         <img class="header__logo" src="img/logo.svg" alt="PrizmaFX">
