--- a/prizma/index.html
+++ b/prizma/index.html
@@ -28,14 +28,17 @@
     <div class="container">
       <div class="header__flex">
         <ul class="header__settings">
+          <li class="header__menu">
+            <button class="header__toggle  header__toggle--inactive" type="button">Open Menu</button>
+          </li>
           <li>
             <select class="header__language">
               <option value="EN">English</option>
               <option value="RU">Russian</option>
             </select>
           </li>
-          <li>
-            <label class="header__search">
+          <li class="header__search">
+            <label >
               <input type="search">
             </label>
           </li>
