--- a/prizma/index.html
+++ b/prizma/index.html
@@ -56,7 +56,7 @@
       <nav class="nav">
         <ul class="nav__list">
           <li>
-            <a class="nav__item" href="#">Accounts</a>
+            <a class="nav__item">Accounts</a>
             <ul class="nav__sublist">
               <li><a class="nav__subitem" href="#">Trade with us</a></li>
               <li><a class="nav__subitem" href="#">Account types</a></li>
@@ -65,7 +65,7 @@
             </ul>
           </li>
           <li>
-            <a class="nav__item" href="#">Platforms</a>
+            <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
               <li><a class="nav__subitem" href="#">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="#">WebTrader</a></li>
@@ -73,7 +73,7 @@
             </ul>
           </li>
           <li>
-            <a class="nav__item" href="#">Tools</a>
+            <a class="nav__item">Tools</a>
             <ul class="nav__sublist">
               <li><a class="nav__subitem" href="#">Spread and trading</a></li>
               <li><a class="nav__subitem" href="#">Glossary</a></li>
