--- a/prizma/accounts/account-types.html
+++ b/prizma/accounts/account-types.html
@@ -40,7 +40,9 @@
             </label>
           </li>
         </ul>
-        <img class="header__logo" src="../img/logo.svg" alt="PrizmaFX">
+        <a href="../index.html">
+          <img class="header__logo" src="../img/logo.svg" alt="PrizmaFX">
+        </a>
         <ul class="header__user">
           <li>
             <a class="button  button--small  button--blue" href="#">Open account</a>
@@ -254,11 +256,13 @@
   </section>
   <footer class="footer">
     <div class="container">
-      <img class="footer__logo" src="../img/footer-logo.svg" alt="PrizmaFX">
+      <a href="../index.html">
+        <img class="footer__logo" src="../img/footer-logo.svg" alt="PrizmaFX">
+      </a>
         <ul class="footer__links">
           <li><a href="#">Licenses</a></li>
           <li>|</li>
-          <li><a href="#">Account Types</a></li>
+          <li><a>Account Types</a></li>
           <li>|</li>
           <li><a href="#">Funding & Withdrawal</a></li>
           <li>|</li>
