--- a/prizma/index.html
+++ b/prizma/index.html
@@ -59,7 +59,7 @@
             <a class="nav__item">Accounts</a>
             <ul class="nav__sublist">
               <li><a class="nav__subitem" href="#">Trade with us</a></li>
-              <li><a class="nav__subitem" href="#">Account types</a></li>
+              <li><a class="nav__subitem" href="accounts/account-types.html">Account types</a></li>
               <li><a class="nav__subitem" href="#">Segregated accounts</a></li>
               <li><a class="nav__subitem" href="#">Open live account</a></li>
             </ul>
@@ -232,7 +232,7 @@
         <ul class="footer__links">
           <li><a href="#">Licenses</a></li>
           <li>|</li>
-          <li><a href="#">Account Types</a></li>
+          <li><a href="accounts/account-types.html">Account Types</a></li>
           <li>|</li>
           <li><a href="#">Funding & Withdrawal</a></li>
           <li>|</li>
