--- a/prizma/index.html
+++ b/prizma/index.html
@@ -200,7 +200,7 @@
         <div class="multyplatform__mockup"></div>
         <div class="multyplatform__text">
           <h1 class="multyplatform__name">Multyplatform trading</h1>
-          <p class="multyplatform__sub">Your goals are unique, so your investment guidance should be too. This is why at MultiplyMarket we take the time to listen and understand what matters most to you before helping you develop and manage your investment strategy. The MT4 is a renowned application which gives you the opportunity to trade Forex, Commodities, and Futures. It is very suitable for those new to trading and also to experienced ones, as the technology is well advanced and easy to use.</p>
+          <p class="multyplatform__sub">Your goals are unique, so your investment guidance should be too. This is why at PrizmaFX we take the time to listen and understand what matters most to you before helping you develop and manage your investment strategy. The MT4 is a renowned application which gives you the opportunity to trade Forex, Commodities, and Futures. It is very suitable for those new to trading and also to experienced ones, as the technology is well advanced and easy to use.</p>
         </div>
       </div>
     </div>
@@ -250,7 +250,7 @@
     <hr class="footer__hr">
     <div class="container">
       <b class="footer__name">Risk Warning:</b>
-      <p class="footer__text">Trading in Forex and CFDs can carry a high level of risk and can result in the loss of part or all of your investment, so it may not be appropriate for all investors. You should be aware of all the risks associated with Forex and CFD trading and seek for independent advice. Past performance does not constitute a reliable indicator of future results. Forecasts for the future do not constitute a reliable indicator of future performance. Copyright for the pages and for the screens displaying the pages, and for the information and material therein and in their arrangement, is owned by © 2017.VACENTY FINANCE LIMITED All Rights Reserved, Registered in Marshall Islands Trust Company Complex, Ajelatake Road, Ajelatake Island, Majuro. Marshall Islands, MH96960 (henceforth: “MultiplyMarket”) unless otherwise indicated.</p>
+      <p class="footer__text">Trading in Forex and CFDs can carry a high level of risk and can result in the loss of part or all of your investment, so it may not be appropriate for all investors. You should be aware of all the risks associated with Forex and CFD trading and seek for independent advice. Past performance does not constitute a reliable indicator of future results. Forecasts for the future do not constitute a reliable indicator of future performance. Copyright for the pages and for the screens displaying the pages, and for the information and material therein and in their arrangement, is owned by © 2017.VACENTY FINANCE LIMITED All Rights Reserved, Registered in Marshall Islands Trust Company Complex, Ajelatake Road, Ajelatake Island, Majuro. Marshall Islands, MH96960 (henceforth: “PrizmaFX”) unless otherwise indicated.</p>
     </div>
     <hr class="footer__hr">
     <div class="container">
@@ -264,6 +264,7 @@
         </ul>
       </div>
     </div>
+    <button class="footer__livechat" type="button"></button>
   </footer>
   <script src="js/jquery.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
