--- a/prizma/accounts/account-types.html
+++ b/prizma/accounts/account-types.html
@@ -104,19 +104,19 @@
               <b>Mini</b>
               <p>Basic Trading For<br>Beginners</p>
               <span>$500</span>
-              <a class="button  button--small  button--blue  table__button" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
+              <a class="button  button--small  button--blue  table__button" href="https://client.PrizmaFX.com/en/members/register/real">Open account</a>
             </th>
             <th class="table__classic  table__classic-hover">
               <b>Classic</b>
               <p>For Skilled<br>Investors</p>
               <span>$5 000</span>
-              <a class="button  button--small  button--blue  table__button" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
+              <a class="button  button--small  button--blue  table__button" href="https://client.PrizmaFX.com/en/members/register/real">Open account</a>
             </th>
             <th class="table__premium  table__premium-hover">
               <b>Premium</b>
               <p>Advanced Transaction<br>For Experienced Investors</p>
               <span>$20 000</span>
-              <a class="button  button--small  button--blue  table__button" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
+              <a class="button  button--small  button--blue  table__button" href="https://client.PrizmaFX.com/en/members/register/real">Open account</a>
             </th>
           </tr>
           <tr>
@@ -280,7 +280,7 @@
     <hr class="footer__hr">
     <div class="container">
       <b class="footer__name">Risk Warning:</b>
-      <p class="footer__text">Trading in Forex and CFDs can carry a high level of risk and can result in the loss of part or all of your investment, so it may not be appropriate for all investors. You should be aware of all the risks associated with Forex and CFD trading and seek for independent advice. Past performance does not constitute a reliable indicator of future results. Forecasts for the future do not constitute a reliable indicator of future performance. Copyright for the pages and for the screens displaying the pages, and for the information and material therein and in their arrangement, is owned by © 2017.VACENTY FINANCE LIMITED All Rights Reserved, Registered in Marshall Islands Trust Company Complex, Ajelatake Road, Ajelatake Island, Majuro. Marshall Islands, MH96960 (henceforth: “MultiplyMarket”) unless otherwise indicated.</p>
+      <p class="footer__text">Trading in Forex and CFDs can carry a high level of risk and can result in the loss of part or all of your investment, so it may not be appropriate for all investors. You should be aware of all the risks associated with Forex and CFD trading and seek for independent advice. Past performance does not constitute a reliable indicator of future results. Forecasts for the future do not constitute a reliable indicator of future performance. Copyright for the pages and for the screens displaying the pages, and for the information and material therein and in their arrangement, is owned by © 2017.VACENTY FINANCE LIMITED All Rights Reserved, Registered in Marshall Islands Trust Company Complex, Ajelatake Road, Ajelatake Island, Majuro. Marshall Islands, MH96960 (henceforth: “PrizmaFX”) unless otherwise indicated.</p>
     </div>
     <hr class="footer__hr">
     <div class="container">
@@ -294,6 +294,7 @@
         </ul>
       </div>
     </div>
+    <button class="footer__livechat" type="button"></button>
   </footer>
   <script src="../js/main.min.js"></script>
 </body>
