--- a/prizma/accounts/account-types.html
+++ b/prizma/accounts/account-types.html
@@ -67,8 +67,8 @@
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
               <li><a class="nav__subitem" href="#">PrizmaFX MetaTrader 4</a></li>
-              <li><a class="nav__subitem" href="#">WebTrader</a></li>
-              <li><a class="nav__subitem" href="#">Trade Mobile</a></li>
+              <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
+              <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
           </li>
           <li>
