--- a/prizma/platforms/mobile.html
+++ b/prizma/platforms/mobile.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>WebTrader - PrizmaFX</title>
+  <title>Mobile - PrizmaFX</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -58,7 +58,7 @@
             <a class="nav__item">Accounts</a>
             <ul class="nav__sublist">
               <li><a class="nav__subitem" href="#">Trade with us</a></li>
-              <li><a class="nav__subitem" href="account-types.html">Account types</a></li>
+              <li><a class="nav__subitem" href="../accounts/account-types.html">Account types</a></li>
               <li><a class="nav__subitem" href="#">Segregated accounts</a></li>
               <li><a class="nav__subitem" href="#">Open live account</a></li>
             </ul>
@@ -67,8 +67,8 @@
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
               <li><a class="nav__subitem" href="#">PrizmaFX MetaTrader 4</a></li>
-              <li><a class="nav__subitem  nav__subitem--active">WebTrader</a></li>
-              <li><a class="nav__subitem" href="#">Trade Mobile</a></li>
+              <li><a class="nav__subitem" href="webtrader.html">WebTrader</a></li>
+              <li><a class="nav__subitem  nav__subitem--active">Trade Mobile</a></li>
             </ul>
           </li>
           <li>
@@ -89,30 +89,35 @@
     <header class="inner__header">
       <div class="container">
         <div class="inner__title">
-          <h1>WebTrader</h1>
-          <h2>WebTrader</h2>
+          <h1>Mobile</h1>
+          <h2>Mobile</h2>
         </div>
       </div>
     </header>
     <div class="inner__content  inner__content--platforms">
       <div class="container">
-        <p class="inner__text">PrizmaFX`s highest purpose is to turn its users into successful traders and increase their success rates as much as possible. For that purpose we give you the PrizmaFX Online trader, which enables you to be 100% involved in the trading process and adjust according to the market conditions, all the while letting you plan your trading activities to your preference.</p>
-        <p class="inner__text">Utilize the full scope of the latest technological developments in the field by trading from any internet connectible device. Investing in Forex, Commodities and CFD has never been easier thanks to the PrizmaFX Online Trader.</p>
-        <div class="webtrader">
-          <div class="webtrader__flex">
-            <div class="webtrader__mockup"></div>
-            <ul class="webtrader__list">
-              <li>Invest in a wide selection of instruments.</li>
-              <li>Perform the trades swiftly.</li>
-              <li>Get informed about the latest industry trends.</li>
-              <li>Get the actual market prices at the moment.</li>
-              <li>Make trades regardless of your location.</li>
-              <li>Make the platform look according to your desires.</li>
-              <li>Make the changes you want.</li>
-              <li>Make informed trading decisions based on technical stats.</li>
-              <li>Have access from any internet connectible device.</li>
+        <p class="inner__subtext">Trading Mobile Application: The independence to trade at any time and place</p>
+        <p class="inner__text">Don’t lag – begin making trades from your device, no matter if it’s phone or tablet, Apple or Android MultiplyMarket`s mobile software gives you the opportunity to invest, operate your profile and check Special MultiplyMarket’s mobile software affords you with abilities to invest, to operate personal profile and to check the newest financial tendencies with no strict attachment to time and place where you are, and without a fee. The possible potential of that software is to please every trader, whether a beginner or an advanced patron. Keywords inside of that are intuitive plain.</p>
+        <p class="inner__text">As we have mentioned before, this software is suitable for almost all devices, whether it’s Apple or Android products.Stay informed regarding newest market processes, and act deliberately keeping to it. Place deals freely strict from your mobile.</p>
+        <p class="inner__text">Invest your capital in a broad assortment of instruments and come in the global markets. Combined chartings among with symbols, together with technological statistics and the newest financial tendencies could assist you in the decision to open or close agreed position. Besides of that, platform affords an absolutely safeness and privacy of its mobile software for your use.</p>
+        <p class="inner__text">Use your mobile device to invest in a variety of financial instruments – Forex, Futures and Commodities.</p>
+        <p class="inner__text">Try your mobile device to invest in wide range of trading instruments, such as Forex, Futures and Commodities.</p>
+        <div class="mobile">
+          <div class="mobile__flex">
+            <div class="mobile__mockup"></div>
+            <ul class="mobile__list">
+              <li>Easy to use exploitation and navigation design</li>
+              <li>You will be able to trade just once you log in</li>
+              <li>Extensive, Widespread & Effective</li>
+              <li>Flawless safety of Forex investment</li>
+              <li>Logging of all your investments</li>
+              <li>Choice of more than 30 indicators</li>
+              <li>Access to the latest chartings</li>
+              <li>Ability to use some features offline</li>
+              <li>Timely quotes are appropriate</li>
               <li>
-                <a class="button  button--blue  webtrader__button" href="#">Try our platform</a>
+                <a class="button  button--blue  mobile__button  mobile__button--appstore" href="#">App Store</a>
+                <a class="button  button--blue  mobile__button  mobile__button--googleplay" href="#">Google Play</a>
               </li>
             </ul>
           </div>
