edits for fucking investors

--- a/forexglobal/trading/platforms/zulutrade.html
+++ b/forexglobal/trading/platforms/zulutrade.html
@@ -151,10 +151,10 @@
         </div>
         <hr>
         <div class="tab">
-          <button class="tab__button" onclick="openFile(event, 'Forex')">Forex</button>
-          <button class="tab__button" onclick="openFile(event, 'Commodities')">Commodities Spot</button>
-          <button class="tab__button" onclick="openFile(event, 'Metals')">Presious metals Spot</button>
-          <button class="tab__button" onclick="openFile(event, 'Indices')">Indices Spot</button>
+          <button class="tab__button  tab__active" onclick="openTab(event, 'Forex')">Forex</button>
+          <button class="tab__button" onclick="openTab(event, 'Commodities')">Commodities Spot</button>
+          <button class="tab__button" onclick="openTab(event, 'Metals')">Presious metals Spot</button>
+          <button class="tab__button" onclick="openTab(event, 'Indices')">Indices Spot</button>
         </div>
         <div id="Forex" class="tab__content  tab__content--forex">
           <table class="tab__table table-striped">
