--- a/prizma/index.html
+++ b/prizma/index.html
@@ -76,7 +76,7 @@
             <a class="nav__item">Tools</a>
             <ul class="nav__sublist">
               <li><a class="nav__subitem" href="#">Spread and trading</a></li>
-              <li><a class="nav__subitem" href="#">Glossary</a></li>
+              <li><a class="nav__subitem" href="tools/glossary.html">Glossary</a></li>
               <li><a class="nav__subitem" href="#">Forex Signals</a></li>
               <li><a class="nav__subitem" href="#">Faq</a></li>
               <li><a class="nav__subitem" href="#">Account funding</a></li>
