--- a/prizma/client/register.html
+++ b/prizma/client/register.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Commodities - PrizmaFX</title>
+  <title>Account Types - PrizmaFX</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -58,7 +58,7 @@
             <a class="nav__item">Accounts</a>
             <ul class="nav__sublist">
               <li><a class="nav__subitem" href="#">Trade with us</a></li>
-              <li><a class="nav__subitem" href="../accounts/account-types.html">Account types</a></li>
+              <li><a class="nav__subitem  nav__subitem--active">Account types</a></li>
               <li><a class="nav__subitem" href="#">Segregated accounts</a></li>
               <li><a class="nav__subitem" href="#">Open live account</a></li>
             </ul>
@@ -68,7 +68,7 @@
             <ul class="nav__sublist">
               <li><a class="nav__subitem" href="#">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
-              <li><a class="nav__subitem" href="#">Trade Mobile</a></li>
+              <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
           </li>
           <li>
@@ -89,30 +89,29 @@
     <header class="inner__header">
       <div class="container">
         <div class="inner__title">
-          <h1>Commodities</h1>
-          <h2>Commodities</h2>
+          <h1>Register</h1>
+          <h2>Register</h2>
         </div>
       </div>
     </header>
-    <div class="inner__content  inner__content--templates">
+    <div class="inner__content  inner__content--client">
       <div class="container">
-        <p class="inner__text">The biggest PrizmaFX priority is to make sure that a platform supplies to its precious customers the broadest feasible selection of assets, and the commodities asset is not an exclusion. Guiding you every single step of a trading process and ensuring that you have the best of possible trading conditions during all the time are other important missions for us.</p>
-        <b class="inner__name  inner__name--big">PrizmaFX allows you:</b>
-        <ul class="inner__list">
-          <li>Invest in precious metal, such as gold or silver</li>
-          <li>Make contractual agreements</li>
-          <li>Make contracts on natural resources</li>
-          <li>Invest in the energy complex</li>
-        </ul>
-        <b class="inner__name  inner__name--big">Gold</b>
-        <p class="inner__text">Recently, there has been seeing such a big jump in the volume of gold and trades with it. Gold is seen as a quite gainful commodity by a lot of investors. PrizmaFX provides you with the ability to invest in gold globally, from any point on the Earth, and you don’t have to make a large physical purchase of big gold quantities. Gold has always been a chief economic influence, and it will develop in the future as well. You should bear this in a mind just because gold is strongly tangled with many currencies. Gold could have a strong and considerable impact on its value.</p>
-        <p class="inner__text">You have the choice to trade Gold with the US Dollar, which is what most people decide to do, but if you`d like you might as well to do the same with the Euro or another existing currency. To make a good trading income, trading gold has always had a lot of potentials.</p>
-        <b class="inner__name  inner__name--big">Silver</b>
-        <p class="inner__text">Worthily said that silver has a twin economic nature. First, it is a precious metal, but it also has the industrial usability, which is one of the most notifiable factors to invest in it. When the price of gold is hesitating, a silver, as a precious metal, can be experienced a positive trend. You can see the same with currency pairs that fluctuate on the market and could make a nice impact on the silver value. Silver is highly demanded usually, specifically in the solar arenas.</p>
-        <b class="inner__name  inner__name--big">Oil</b>
-        <p class="inner__text">The use of crude oil usually intends on diversification of one’s profile that help to detract the risk of a loss. What works best for this is a quite unique nature of that asset, which makes it stand out from equity and currency trading. Inventory factors, OPEC reports or climate changes are not the only factors that you need to think of trading oil. But, it is the second most traded commodity after gold and it has an impressive number of turnovers every day.</p>
-        <b class="inner__name  inner__name--big">Natural Gas</b>
-        <p class="inner__text">Natural gas is quite a rare resource and we are often unsure about its overall quantity. This asset is very hard to predict due to countless political circumstances, unstable climate and many innovations regarding its excavation and discovery. It is usually recommended to make a large research and develop the strategy before investing in gas. In that case, MultiplyproMarket has every day non-stop service support for its users. A team of our dedicated professionals handles any inquiries or issues about trading this and other commodities.</p>
+        <div class="client">
+          <div class="client__info">
+            <b>Welcome!</b>
+            <p>Register<br>and enjoy<br>our benefits.</p>
+            <small>Trading involves risk of loss</small>
+          </div>
+          <form class="form" action="" method="post">
+            <label>
+              Title
+              <select class="form__select  form__select--title">
+                <option value="Mr">Mr.</option>
+                <option value="Ms">Ms.</option>
+              </select>
+            </label>
+          </form>
+        </div>
       </div>
     </div>
   </section>
