--- a/prizma/client/register.html
+++ b/prizma/client/register.html
@@ -449,14 +449,8 @@
                 <small class="form__warning">Tip: Strong passwords uses a combination of numbers, symbols, capital and small letters.</small>
               </label>
             </div>
-            <div class="form__flex">
-              <label class="form__label">
-                
-              </label>
-              <label class="form__label  form__label--password">
-                Password:
-                <input class="form__input  form__input--big  form__input--password" type="password" name="Password" required>
-              </label>
+            <div class="form__flex  form__flex--right">
+              <button class="form__submit" type="submit" name="Submit">Open account</button>
             </div>
           </form>
         </div>
