mobile register form

--- a/prizma/client/register.html
+++ b/prizma/client/register.html
@@ -454,6 +454,34 @@
             </div>
           </form>
         </div>
+        <div class="client__flex">
+          <ul class="client__list">
+            <li>
+              <b>Safe and Secure</b>
+            </li>
+            <li>Bank level security</li>
+            <li>No personal details are shared</li>
+            <li>Top SSL encryption</li>
+          </ul>
+          <ul class="client__list">
+            <li>
+              <b>Real account benefits</b>
+            </li>
+            <li>Trade on multiple platforms using an internet browser or mobile device</li>
+            <li>Deep market liquidity. We connected to a clearly defined liquidity pools</li>
+            <li>No Transaction Costs</li>
+          </ul>
+          <ul class="client__list">
+            <li>
+              <b>Stronger password</b>
+            </li>
+            <li>At least 8 characters</li>
+            <li>Contains numbers</li>
+            <li>Contains letters</li>
+            <li>Contains special characters</li>
+            <li>Contains upper and lower case</li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
