links to register page

--- a/prizma/accounts/account-types.html
+++ b/prizma/accounts/account-types.html
@@ -45,7 +45,7 @@
         </a>
         <ul class="header__user">
           <li>
-            <a class="button  button--small  button--blue" href="#">Open account</a>
+            <a class="button  button--small  button--blue" href="../client/register.html">Open account</a>
           </li>
           <li>
             <a class="button  button--login" href="#">Log in</a>
@@ -60,7 +60,7 @@
               <li><a class="nav__subitem" href="#">Trade with us</a></li>
               <li><a class="nav__subitem  nav__subitem--active">Account types</a></li>
               <li><a class="nav__subitem" href="#">Segregated accounts</a></li>
-              <li><a class="nav__subitem" href="#">Open live account</a></li>
+              <li><a class="nav__subitem" href="../client/register.html">Open live account</a></li>
             </ul>
           </li>
           <li>
