--- a/prizma/index.html
+++ b/prizma/index.html
@@ -46,7 +46,7 @@
         <img class="header__logo" src="img/logo.svg" alt="PrizmaFX">
         <ul class="header__user">
           <li>
-            <a class="button  button--small  button--blue" href="#">Open account</a>
+            <a class="button  button--small  button--blue" href="client/register.html">Open account</a>
           </li>
           <li>
             <a class="button  button--login" href="#">Log in</a>
@@ -61,7 +61,7 @@
               <li><a class="nav__subitem" href="#">Trade with us</a></li>
               <li><a class="nav__subitem" href="accounts/account-types.html">Account types</a></li>
               <li><a class="nav__subitem" href="#">Segregated accounts</a></li>
-              <li><a class="nav__subitem" href="#">Open live account</a></li>
+              <li><a class="nav__subitem" href="client/register.html">Open live account</a></li>
             </ul>
           </li>
           <li>
@@ -209,7 +209,7 @@
     <div class="container">
       <h1 class="ready__name">Ready to expirience PrizmaFX</h1>
       <p class="ready__text">Joining is quick and easy. It takes less than 5 minutes to be able to finally pay and<br>receive payments anytime, anywhere and to any account!</p>
-      <a class="button  button--white  ready__start" href="#">Open account</a>
+      <a class="button  button--white  ready__start" href="client/register.html">Open account</a>
     </div>    
   </section>
   <section class="map">
@@ -268,6 +268,7 @@
   </footer>
   <script src="js/jquery.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
-  <script src="js/main.min.js"></script>
+  <script src="js/slider.js"></script>
+  <script src="js/main.min.js" async></script>
 </body>
 </html>
