--- a/prizma/client/register.html
+++ b/prizma/client/register.html
@@ -48,7 +48,7 @@
             <a class="button  button--small  button--blue">Open account</a>
           </li>
           <li>
-            <a class="button  button--login" href="#">Log in</a>
+            <a class="button  button--login" href="login.html">Log in</a>
           </li>
         </ul>
       </div>
