--- a/prizma/platforms/webtrader.html
+++ b/prizma/platforms/webtrader.html
@@ -48,7 +48,7 @@
             <a class="button  button--small  button--blue" href="../client/register.html">Open account</a>
           </li>
           <li>
-            <a class="button  button--login" href="#">Log in</a>
+            <a class="button  button--login" href="../client/login.html">Log in</a>
           </li>
         </ul>
       </div>
